Use external font for left panel

--- a/styles.css
+++ b/styles.css
@@ -36,6 +36,7 @@ body {
     align-items: center;
     margin-top: 33%;
     font-size: 60px;
+    font-family: "freemettoMedium";
 }
 
 .logo-box>img{
