--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    flex-basis: 25%;
 }
 
 .left-div>p {
@@ -40,7 +41,8 @@ body {
 }
 
 .logo-box>img{
-    height: 100px;
+    height: 1.5em;
+    filter: invert(100%);
 }
 
 /* Right hand side */
