--- a/styles.css
+++ b/styles.css
@@ -1,20 +1,23 @@
 body {
-    display: flex;
+    display: grid;
+    grid-template-areas:    "left-div top-right-div"
+                            "left-div form"
+                            "left-div bottom-right-div";
+    grid-template-columns: 1fr 2fr;
     margin: 0;
+    background-color: whitesmoke;
 }
 
 /* Left side */
 
 .left-div{
     height: 100vh;
-    flex-grow: 2;
-    flex-shrink: 1;
     background-image: url("gfx/rohit-tandon-unsplash.jpg");
     background-size: cover;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    flex-basis: 25%;
+    grid-area: left-div;
 }
 
 .left-div>p {
@@ -57,8 +60,34 @@ a {
 
 /* Right hand side */
 
-.right-div {
+.top-right-div {
+    grid-area: top-right-div;
+    font-size: 1.5rem;
+    font-weight: bold;
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+    margin-bottom: 2rem;
+    margin-left: 1rem;
+}
+
+form {
+    grid-area: form;
+    margin-left: 1rem;
+    box-shadow: 4px 4px 6px 0px #000000;
+    display: flex;
+    margin-left: 1rem;
+}
+
+form>div {
     background-color: white;
+    width: 100%;
+    height: 100%;
+    padding-left: 10px;
+    display: grid;
+    grid-template-areas:    "p p";
+}
+
 form label {
     display: flex;
     flex-direction: column;
@@ -66,8 +95,19 @@ form label {
     font-family: sans-serif;
 }
 
-.right-div>div:first-child {
-    font-size: 1.5rem;
-    margin: 2rem;
-    flex: 1;
+form p {
+    font-weight: bold;
+    font-size: 1.2rem;
+    grid-area: p;
+}
+
+.bottom-right-div {
+    grid-area: bottom-right-div;
+    margin-left: 1rem;
+    margin-top: 2rem;
+}
+
+.bottom-right-div a {
+    color:  rgb(40%, 40%, 40%);
+    text-decoration: none;
 }
