--- a/styles.css
+++ b/styles.css
@@ -101,6 +101,11 @@ form p {
     grid-area: p;
 }
 
+form input{
+    border-radius: 0.3rem;
+    height: 1.3rem;
+    border-color: whitesmoke;
+}
 .bottom-right-div {
     grid-area: bottom-right-div;
     margin-left: 1rem;
