--- a/styles.css
+++ b/styles.css
@@ -114,3 +114,15 @@ form input{
     color:  rgb(40%, 40%, 40%);
     text-decoration: none;
 }
+button {
+    background-color: rgb(70%, 70%, 70%);
+    border: none;
+    border-radius: 1rem;
+    padding: 0.9rem;
+    box-shadow: 2px 2px 8px 0px rgb(40%, 40%, 40%);
+    font-weight: bold;
+}
+
+button:hover {
+    box-shadow: 2px 2px 8px 0px black;
+}
